Fix products section spacing

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -137,6 +137,10 @@
     width: 100%;
   }
 
+  &--icon-large {
+    padding: var(--padding-icon-big);
+  }
+
   &--tab-hidden {
     @include tab {
       display: none;
